# minimamemosa

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  MOBILE_RESPONSIVE.md  README.md  UNIFIED_DESIGN.md  debug-selectors.ts  docker-compose.yml  docker-entrypoint.sh  imagehandler.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pptr.js  regenerate-screenshots.sh  screenshots.ts  test-esm-no-bundle.html  test-jsdom.js  test-tiptap-esm.html  test-tiptap-importmap.html  test-tiptap.html  test.db  test.html  test_br  test_br.rs  test_script.rs  test_strip  test_strip.rs  test_strip2  test_strip2.rs  test_strip3  test_strip3.rs  test_tag  test_tag.rs  test_tag2  (+5 more)
.gemini/antigravity/scratch/: test_br_rule.js  test_regex.js  test_render.rs  test_shift_enter.js  test_turndown.html
.github/workflows/: docker-publish.yml
.kilo/plans/: 1782236624168-close-menus-on-outside-click.md  fix-edit-functionality.md
e2e/: auth.setup.ts  auth.spec.ts  features.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  notes.spec.ts
e2e/.auth/: user.json
src/: auth.rs  db.rs  editor_setup.js  main.rs  templates.rs
static/: tiptap-bundle.min.js
tests/: test_br.rs
